--- a/styles/index.scss
+++ b/styles/index.scss
@@ -16,4 +16,6 @@
   'blocks/hero-partners',
   'blocks/advantage',
   'blocks/rating-card',
-  'blocks/advantages';
+  'blocks/advantages',
+  'blocks/features-card',
+  'blocks/features';
