--- a/styles/index.scss
+++ b/styles/index.scss
@@ -18,4 +18,6 @@
   'blocks/rating-card',
   'blocks/advantages',
   'blocks/features-card',
-  'blocks/features';
+  'blocks/features',
+  'blocks/benefits',
+  'blocks/image-elements';
