--- a/styles/blocks/_button.scss
+++ b/styles/blocks/_button.scss
@@ -22,4 +22,12 @@
     color: var(--color-dark);
     border: none;
   }
+
+  &--elipce {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 12px;
+    height: 40px;
+  }
 }
