--- a/styles/index.scss
+++ b/styles/index.scss
@@ -20,4 +20,7 @@
   'blocks/features-card',
   'blocks/features',
   'blocks/benefits',
-  'blocks/image-elements';
+  'blocks/image-elements',
+  'blocks/toggle.scss',
+  'blocks/plan-card',
+  'blocks/plan';
