--- a/styles/blocks/_benefits.scss
+++ b/styles/blocks/_benefits.scss
@@ -37,6 +37,12 @@
       left: -15%;
       rotate: -15deg;
       border-radius: var(--border-radius-small);
+
+      @include mobile {
+        top: 0;
+        left: 90%;
+        rotate: 15deg;
+      }
     }
 
     &::after {
