--- a/styles/index.css
+++ b/styles/index.css
@@ -402,6 +402,11 @@ h4, .h4 {
   translate: -50% -50%;
   filter: blur(400px);
 }
+@media (max-width: 1023px) {
+  .header::before {
+    display: none;
+  }
+}
 @media (max-width: 1280px) {
   .header {
     padding-top: 30px;
@@ -829,6 +834,13 @@ h4, .h4 {
   rotate: -15deg;
   border-radius: var(--border-radius-small);
 }
+@media (max-width: 767px) {
+  .benefits__image-wrapper::before {
+    top: 0;
+    left: 90%;
+    rotate: 15deg;
+  }
+}
 .benefits__image-wrapper::after {
   width: 634px;
   aspect-ratio: 1;
@@ -957,6 +969,7 @@ h4, .h4 {
   .plan-card {
     max-width: 350px;
     padding: 0;
+    margin-inline: auto;
   }
 }
 .plan-card__price {
