--- a/styles/index.scss
+++ b/styles/index.scss
@@ -9,6 +9,7 @@
 
 @import 
   'blocks/button',
+  'blocks/field',
   'blocks/header',
   'blocks/section',
   'blocks/hero',
@@ -23,4 +24,7 @@
   'blocks/image-elements',
   'blocks/toggle.scss',
   'blocks/plan-card',
-  'blocks/plan';
+  'blocks/plan',
+  'blocks/get-started',
+  'blocks/quote',
+  'blocks/reviews';
