--- a/styles/_normalize.scss
+++ b/styles/_normalize.scss
@@ -187,6 +187,10 @@ button {
   fill: #BBBBBB !important;
 }
 
+.custom-icon-gray-alt[fill]:not([fill="none"]):not([fill^="url"]) {
+  fill: #d9d9d9 !important;
+}
+
 .custom-icon-green[fill]:not([fill="none"]):not([fill^="url"]) {
   fill: #54BD95;
 }
