--- a/styles/blocks/_field.scss
+++ b/styles/blocks/_field.scss
@@ -19,5 +19,14 @@
       height: 80px;
       resize: none;
     }
+
+    &--footer {
+      height: 60px;
+      padding: 15px 20px;
+      border-radius: var(--border-radius-large);
+      background-color: transparent;
+      color: var(--color-light);
+      border: 2px solid var(--color-gray);
+    }
   }
 }
